  * Update the patches:
    - upstream_set-cmake_min_req-to-match-kdelibs-policy-and-enable.patch:
      drop, backported
    - upstream_cmake-fix-add_definitions-according-to-new-policy.patch: drop,
      backported
  * Stop shipping the custom /etc/sysctl.d/30-baloo-inotify-limit.conf: this
    is the wrong place for it, and maybe no more needed.

 -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 31 Jul 2016 15:37:23 +0200

kde-runtime (4:16.04.2-2) unstable; urgency=medium

  * Prefer oxygen5-icon-theme
  * Refresh patches
  * Reenable gpg backend

 -- Maximiliano Curia <maxy@debian.org>  Mon, 04 Jul 2016 15:08:04 +0200

kde-runtime (4:16.04.2-1) unstable; urgency=medium

  * Team upload.
  * New upstream release.
  * Disable the build of khelpcenter, as it is not used from this source.
    - remove leftover bits from kde-runtime.install
    - stop use the ${perl:Depends} substvar in kde-runtime
  * Wrap too long changelog lines in older entries.
  * Remove unused and outdated installgen file.
  * Restore headers for patches.
  * Drop patch khelp_htdig.diff, no more needed now that khelpcenter is not
    built.
  * Clean not-installed file.
  * Backport upstream commits 5a1d89e006ca69c6bf5351a796f7da57a6f96582 and
    823d2fbd9cbc146e007510a41b4820fb8b9e81b8 to set the cmake minimum version
    required and policies, and build properly with that; patches
    upstream_set-cmake_min_req-to-match-kdelibs-policy-and-enable.patch and
    upstream_cmake-fix-add_definitions-according-to-new-policy.patch.
  * Fix build on Hurd, by providing a fallback definition of PATH_MAX in
    kio_nfs; patch hurd.diff.

 -- Pino Toscano <pino@debian.org>  Sat, 18 Jun 2016 12:20:25 +0200

kde-runtime (4:16.04.0-1) unstable; urgency=medium

  [ Automatic packaging ]
  * Bump Standards-Version to 3.9.8
  * Missing line in diff file
  * Refresh patches

  [ Maximiliano Curia ]
  * New upstream release (15.12.2).